attributes with v-blind and methods[C

--- a/2-vue-basic/index.html
+++ b/2-vue-basic/index.html
@@ -16,9 +16,9 @@
     <section id="user-goal">
         <!-- id use to mount   -->
         <h2>My Course Goal</h2>
-        <p>{{ courseGoal }}</p>
+        <p>{{ outputGoal() }}</p>
         <!-- {{}} use to data -->
         <p>Learn more <a v-bind:href="vueLink" >about Vue</a></p>
     </section>
 </body>
-</html>l
+</html>
