--- a/2-vue-basic-2/index.html
+++ b/2-vue-basic-2/index.html
@@ -15,9 +15,19 @@
     </header>
     <section id="events">
         <h2>Events in Action</h2>
-        <button v-on:click="add">Add</button>
-        <button v-on:click="reduce">Remove</button>
+        <button v-on:click="add(10)">Add 10</button>
+        <button v-on:click="reduce(5)">Subtract 5</button>
+        <p v-once>Starting Counter: {{ counter }}</p>
         <p>Result: {{ counter }}</p>
+        <input 
+        type="text" 
+        v-on:input="setName($event, 'Nguyen Van')" 
+        v-on:keyup.enter="confirmInput">
+        <p>Your Name: {{ confirmName }}</p>
+        <form v-on:submit.prevent="submitForm">
+            <input type="text">
+            <button>Sign Up</button>
+        </form>
     </section>
 </body>
 </html>
