--- a/2-vue-basic-2/index.html
+++ b/2-vue-basic-2/index.html
@@ -15,16 +15,15 @@
     </header>
     <section id="events">
         <h2>Events in Action</h2>
-        <button v-on:click="add(10)">Add 10</button>
-        <button v-on:click="reduce(5)">Subtract 5</button>
+        <button @click="add(10)">Add 10</button>
+        <button @click="reduce(5)">Subtract 5</button>
         <p v-once>Starting Counter: {{ counter }}</p>
         <p>Result: {{ counter }}</p>
-        <input 
-        type="text" 
-        v-on:input="setName($event, 'Nguyen Van')" 
-        v-on:keyup.enter="confirmInput">
-        <p>Your Name: {{ confirmName }}</p>
-        <form v-on:submit.prevent="submitForm">
+        <input type="text" v-model="name">
+        <input type="text" v-model="lastName">
+        <button @click="resetInput">Reset Input</button>
+        <p>Your Name: {{ fullname }}</p>
+        <form @submit.prevent="submitForm">
             <input type="text">
             <button>Sign Up</button>
         </form>
